--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --env.SITE_URL=http://localhost:3000 --env.API_URL=http://localhost:3600 --config webpack.config.js --mode development --open --hot",
-    "build": "webpack --env.SITE_URL=http:// --config webpack.config.js --mode production",
+    "build": "webpack --env.SITE_URL=https://quirky-shannon-a152f2.netlify.app/ --config webpack.config.js --mode production",
     "lint": "eslint --fix src/components src/modules src/reusables src/static/utils"
   },
   "author": "saurabh",
@@ -35,6 +35,10 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@hawk-ui/button": "^2.10.1",
+    "@hawk-ui/input": "^2.10.1",
+    "@hawk-ui/loader": "^2.10.1",
+    "@hawk-ui/table": "^2.10.1",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
