--- a/package.json
+++ b/package.json
@@ -39,13 +39,19 @@
     "@hawk-ui/input": "^2.10.1",
     "@hawk-ui/loader": "^2.10.1",
     "@hawk-ui/table": "^2.10.1",
+    "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "history": "^5.0.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   }
 }
