--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --env.SITE_URL=http://localhost:3000 --env.API_URL=http://localhost:8000 --config webpack.config.js --mode development --open --hot",
-    "build": "webpack --env.SITE_URL=https://quirky-shannon-a152f2.netlify.app --env.API_URL=http://localhost:8000 --config webpack.config.js --mode production",
+    "build": "webpack --env.SITE_URL=https://quirky-shannon-a152f2.netlify.app --env.API_URL=http://68.183.87.38 --config webpack.config.js --mode production",
     "lint": "eslint --fix src/components src/modules src/reusables src/static/utils"
   },
   "author": "saurabh",
