--- a/env/.env.production
+++ b/env/.env.production
@@ -2,4 +2,4 @@ MODE="production"
 ORG_NAME="Master"
 SITE_URL="https://quirky-shannon-a152f2.netlify.app"
 
-API_URL="https://bukuwarung.wallnit.com"
+API_URL="http://bukuwarung.wallnit.com"
